--- a/index.html
+++ b/index.html
@@ -37,5 +37,72 @@
             <img src="image/Quote.png" alt="quote">
         </section>
     </section>
+
+    <!-- Gallery section -->
+    <section class="grid__container">
+        <div class="grid__item grid__item-one">
+            <img src="image/Rectangle.png" alt="Description of image 1">
+        </div>
+        <div class="grid__item grid__item-two">
+            <img src="image/Rectangle-1.png" alt="Description of image 2">
+        </div>
+        <div class="grid__item grid__item-three">
+            <img src="image/Rectangle-2.png" alt="Description of image 3">
+        </div>
+        <div class="grid__item grid__item-four">
+            <img src="image/Rectangle-3.png" alt="Description of image 4">
+        </div>
+        <div class="grid__item grid__item-five">
+            <img src="image/Rectangle-4.png" alt="Description of image 5">
+        </div>
+        <div class="grid__item grid__item-six">
+            <img src="image/Rectangle-5.png" alt="Description of image 6">
+        </div>
+        <div class="grid__item grid__item-seven">
+            <img src="image/Rectangle-6.png" alt="Description of image 7">
+        </div>
+        <div class="grid__item grid__item-eight">
+            <img src="image/Rectangle-7.png" alt="Description of image 8">
+        </div>
+        <div class="grid__item grid__item-nine">
+            <img src="image/Rectangle-8.png" alt="Description of image 9">
+        </div>
+        <div class="grid__item grid__item-ten">
+            <img src="image/Rectangle-9.png" alt="Description of image 10">
+        </div>
+        <div class="grid__item grid__item-eleven">
+            <img src="image/Rectangle-10.png" alt="Description of image 11">
+        </div>
+        <div class="grid__item grid__item-twelve">
+            <img src="image/Rectangle-11.png" alt="Description of image 12">
+        </div>
+    </section>
+
+    <!--Group-->
+    <section class="group__container">
+        <article class="group__container-info">
+            <h2>
+                We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details
+            </h2>
+        </article>
+        <section class="service__list">
+            <ul class="service__list-left">
+                <li><a href="">Multimedia</a></li>
+                <li><a href="">Interactive</a></li>
+                <li><a href="">Branding</a></li>
+            </ul>
+            <ul class="service__list-right">
+                <li><a href="#">Creative design</a></li>
+                <li><a href="#">Packaging</a></li>
+                <li><a href="#">Coding</a></li>
+            </ul>
+        </section>
+    </section>
+
+    <!--Awards-->
+    <section class="awards__container">
+        
+    </section>
+    
 </body>
 </html>
