--- a/index.html
+++ b/index.html
@@ -41,40 +41,40 @@
     <!-- Gallery section -->
     <section class="grid__container">
         <div class="grid__item grid__item-one">
-            <img src="image/Rectangle.png" alt="Description of image 1">
+            <img src="./image/gallery/Rectangle.png" alt="Description of image 1">
         </div>
         <div class="grid__item grid__item-two">
-            <img src="image/Rectangle-1.png" alt="Description of image 2">
+            <img src="./image/gallery/Rectangle-1.png" alt="Description of image 2">
         </div>
         <div class="grid__item grid__item-three">
-            <img src="image/Rectangle-2.png" alt="Description of image 3">
+            <img src="./image/gallery/Rectangle-2.png" alt="Description of image 3">
         </div>
         <div class="grid__item grid__item-four">
-            <img src="image/Rectangle-3.png" alt="Description of image 4">
+            <img src="./image/gallery/Rectangle-3.png" alt="Description of image 4">
         </div>
         <div class="grid__item grid__item-five">
-            <img src="image/Rectangle-4.png" alt="Description of image 5">
+            <img src="./image/gallery/Rectangle-4.png" alt="Description of image 5">
         </div>
         <div class="grid__item grid__item-six">
-            <img src="image/Rectangle-5.png" alt="Description of image 6">
+            <img src="./image/gallery/Rectangle-5.png" alt="Description of image 6">
         </div>
         <div class="grid__item grid__item-seven">
-            <img src="image/Rectangle-6.png" alt="Description of image 7">
+            <img src="./image/gallery/Rectangle-6.png" alt="Description of image 7">
         </div>
         <div class="grid__item grid__item-eight">
-            <img src="image/Rectangle-7.png" alt="Description of image 8">
+            <img src="./image/gallery/Rectangle-7.png" alt="Description of image 8">
         </div>
         <div class="grid__item grid__item-nine">
-            <img src="image/Rectangle-8.png" alt="Description of image 9">
+            <img src="./image/gallery/Rectangle-8.png" alt="Description of image 9">
         </div>
         <div class="grid__item grid__item-ten">
-            <img src="image/Rectangle-9.png" alt="Description of image 10">
+            <img src="./image/gallery/Rectangle-9.png" alt="Description of image 10">
         </div>
         <div class="grid__item grid__item-eleven">
-            <img src="image/Rectangle-10.png" alt="Description of image 11">
+            <img src="./image/gallery/Rectangle-10.png" alt="Description of image 11">
         </div>
         <div class="grid__item grid__item-twelve">
-            <img src="image/Rectangle-11.png" alt="Description of image 12">
+            <img src="./image/gallery/Rectangle-11.png" alt="Description of image 12">
         </div>
     </section>
 
