--- a/pages/project.html
+++ b/pages/project.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <nav class="nav__container">
-        <a href="../index.html"><img src="../image/logo.svg" alt="logo" class="nav__logo"></a>
+        <a href="../index.html">
+            <img src="../image/logo.svg" alt="logo" class="nav__logo">
+        </a>
         <ul class="nav__list">
             <li class="nav__link">
                 <a href="./project.html" class="link">Project</a>
@@ -115,7 +117,9 @@
 
       <!--Footer-->
     <footer class="footer__container">
-        <img src="../image/logo.svg" alt="Company logo" class="footer__logo">
+        <a href="../index.html">
+            <img src="../image/logo.svg" alt="logo" class="footer__logo">
+        </a>
         <ul class="footer__list">
             <li class="footer__item">
                 <a href="../pages/project.html" class="footer__link"><h4>Project</h4></a>
