--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nav__container">
-        <a href="#home"><img src="image/logo.svg" alt="logo" class="nav__logo"></a>
-        <ul class="nav__list">
-            <li class="nav__link">
-                <a href="./pages/project.html" class="link">Project</a>
-            </li>
-            <li class="nav__link">
-                <a href="./pages/contact.html" class="link">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="nav__container">
+            <a href="#home"><img src="image/logo.svg" alt="logo" class="nav__logo"></a>
+            <ul class="nav__list">
+                <li class="nav__link">
+                    <a href="./pages/project.html" class="link">Project</a>
+                </li>
+                <li class="nav__link">
+                    <a href="./pages/contact.html" class="link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <!--Hero Section-->
     <section class="hero__container" id="home">
@@ -157,7 +159,9 @@
 
     <!--Footer-->
     <footer class="footer__container">
-        <img src="image/logo.svg" alt="Company logo" class="footer__logo">
+        <a href="./index.html">
+            <img src="../image/logo.svg" alt="logo" class="footer__logo">
+        </a>
         <ul class="footer__list">
             <li class="footer__item">
                 <a href="./pages/project.html" class="footer__link"><h4>Project</h4></a>
@@ -167,7 +171,7 @@
             </li>
         </ul>
         <div class="footer__social">
-            <img src="image/Social.svg" alt="Social media icons" class="icons">
+            <img src="./image/Social.svg" alt="Social media icons" class="icons">
         </div>
     </footer>
     
