--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,19 +11,21 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nav__container">
-        <a href="../index.html">
-            <img src="../image/logo.svg" alt="logo" class="nav__logo">
-        </a>
-        <ul class="nav__list">
-            <li class="nav__link">
-                <a href="./project.html" class="link">Project</a>
-            </li>
-            <li class="nav__link">
-                <a href="./contact.html" class="link">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="nav__container">
+            <a href="../index.html">
+                <img src="../image/logo.svg" alt="logo" class="nav__logo">
+            </a>
+            <ul class="nav__list">
+                <li class="nav__link">
+                    <a href="./project.html" class="link">Project</a>
+                </li>
+                <li class="nav__link">
+                    <a href="./contact.html" class="link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
     <!--Content-->
     <section class="content__container">
