--- a/pages/project.html
+++ b/pages/project.html
@@ -11,19 +11,21 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="nav__container">
-        <a href="../index.html">
-            <img src="../image/logo.svg" alt="logo" class="nav__logo">
-        </a>
-        <ul class="nav__list">
-            <li class="nav__link">
-                <a href="./project.html" class="link">Project</a>
-            </li>
-            <li class="nav__link">
-                <a href="./contact.html" class="link">Contact</a>
-            </li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="nav__container">
+            <a href="../index.html">
+                <img src="../image/logo.svg" alt="logo" class="nav__logo">
+            </a>
+            <ul class="nav__list">
+                <li class="nav__link">
+                    <a href="./project.html" class="link">Project</a>
+                </li>
+                <li class="nav__link">
+                    <a href="./contact.html" class="link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <!--Hero-->
     <section class="hero__container">
@@ -109,9 +111,9 @@
         </p>
 
         <section class="image">
-            <img src="../image/project/Image1.png" alt="image1">
-            <img src="../image/project/Image2.png" alt="image2">
-            <img src="../image/project/Image3.png" alt="image3">
+            <img src="../image/project/Image1.png" class="image-item" alt="image1">
+            <img src="../image/project/Image2.png" class="image-item" alt="image2">
+            <img src="../image/project/Image3.png" class="image-item" alt="image3">
         </section>
      </section>
 
