changed alt text for images

--- a/index.html
+++ b/index.html
@@ -43,40 +43,40 @@
     <!-- Gallery section -->
     <section class="grid__container">
         <div class="grid__item grid__item-one">
-            <img src="./image/gallery/Rectangle.png" alt="Description of image 1">
+            <img src="./image/gallery/Rectangle.png" alt="Image of a human going out from a box like if she is dancing">
         </div>
         <div class="grid__item grid__item-two">
-            <img src="./image/gallery/Rectangle-1.png" alt="Description of image 2">
+            <img src="./image/gallery/Rectangle-1.png" alt="Person sitting on a cactus with a blue baloon in front of his face">
         </div>
         <div class="grid__item grid__item-three">
-            <img src="./image/gallery/Rectangle-2.png" alt="Description of image 3">
+            <img src="./image/gallery/Rectangle-2.png" alt="Person on top of a giant covered with a sheet with sun and birds in background">
         </div>
         <div class="grid__item grid__item-four">
-            <img src="./image/gallery/Rectangle-3.png" alt="Description of image 4">
+            <img src="./image/gallery/Rectangle-3.png" alt="Man in a fiend full of flower looking at the sun">
         </div>
         <div class="grid__item grid__item-five">
-            <img src="./image/gallery/Rectangle-4.png" alt="Description of image 5">
+            <img src="./image/gallery/Rectangle-4.png" alt="Boy with ideas going out of his mind in form of wave of colors">
         </div>
         <div class="grid__item grid__item-six">
-            <img src="./image/gallery/Rectangle-5.png" alt="Description of image 6">
+            <img src="./image/gallery/Rectangle-5.png" alt="Statue of libery with a dress">
         </div>
         <div class="grid__item grid__item-seven">
-            <img src="./image/gallery/Rectangle-6.png" alt="Description of image 7">
+            <img src="./image/gallery/Rectangle-6.png" alt="Woman walking on a huge carpet">
         </div>
         <div class="grid__item grid__item-eight">
-            <img src="./image/gallery/Rectangle-7.png" alt="Description of image 8">
+            <img src="./image/gallery/Rectangle-7.png" alt="Woman looking at the sun in the desert, book cover">
         </div>
         <div class="grid__item grid__item-nine">
-            <img src="./image/gallery/Rectangle-8.png" alt="Description of image 9">
+            <img src="./image/gallery/Rectangle-8.png" alt="Flowers going out from a face of a man">
         </div>
         <div class="grid__item grid__item-ten">
-            <img src="./image/gallery/Rectangle-9.png" alt="Description of image 10">
+            <img src="./image/gallery/Rectangle-9.png" alt="Man posing with paint on his face">
         </div>
         <div class="grid__item grid__item-eleven">
-            <img src="./image/gallery/Rectangle-10.png" alt="Description of image 11">
+            <img src="./image/gallery/Rectangle-10.png" alt="Kid swinging from a piano swing in the sky">
         </div>
         <div class="grid__item grid__item-twelve">
-            <img src="./image/gallery/Rectangle-11.png" alt="Description of image 12">
+            <img src="./image/gallery/Rectangle-11.png" alt="Forest mountain from above, forest is falling">
         </div>
     </section>
 
@@ -114,7 +114,6 @@
                     <p class="award-details-description">Application that helps to find nearest sport centres</p>
                 </div>
             <p class="award__year">2018</p>
-            </section>
     </section>
 
     <section class="awards__container-two">
@@ -126,24 +125,22 @@
                     <p class="award-details-two-description">Application that helps to find nearest sport centres.</p>
                 </div>
                 <p class="award__year-two">2018</p>
-            </section>
     </section>
 
     <!--Awards bottom-->
        <section class="awards__container">
-        <h3 class="awards__container-top-title">
-            CSSDesignAwards
-        </h3>
-            <section class="award__item">
-                <h4 class="award-type">Site of the day</h4>
-            </section>
-                <div class="award-details">
-                    <p class="award-details-name">Genesis UI Kit</p>
-                    <p class="award-details-description">Application that helps to find nearest sport centres</p>
-                </div>
-            <p class="award__year">2017</p>
-            </section>
-    </section>
+            <h3 class="awards__container-top-title">
+                CSSDesignAwards
+            </h3>
+                <section class="award__item">
+                    <h4 class="award-type">Site of the day</h4>
+                </section>
+                    <div class="award-details">
+                        <p class="award-details-name">Genesis UI Kit</p>
+                        <p class="award-details-description">Application that helps to find nearest sport centres</p>
+                    </div>
+                <p class="award__year">2017</p>
+        </section>
 
     <section class="awards__container-two">
             <section class="award__item-two">
@@ -154,7 +151,6 @@
                     <p class="award-details-two-description">Application that helps to find nearest sport centres.</p>
                 </div>
                 <p class="award__year-two">2016</p>
-            </section>
     </section>
 
     <!--Footer-->
