--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../style/contact.css">
     <link rel="stylesheet" href="style/normalize.css">
     <title>Document</title>
@@ -59,19 +60,21 @@
 
     <!--Footer-->
     <footer class="footer__container">
-        <a href="../index.html">
+        <a href="./index.html">
             <img src="../image/logo.svg" alt="logo" class="footer__logo">
-        </a>        
+        </a>
         <ul class="footer__list">
             <li class="footer__item">
-                <a href="../pages/project.html" class="footer__link"><h4>Project</h4></a>
+                <a href="./pages/project.html" class="footer__link"><h4>Project</h4></a>
             </li>
             <li class="footer__item">
-                <a href="../pages/contact.html" class="footer__link"><h4>Contact</h4></a>
+                <a href="./pages/contact.html" class="footer__link"><h4>Contact</h4></a>
             </li>
         </ul>
         <div class="footer__social">
-            <img src="../image/Social.svg" alt="Social media icons" class="icons">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </footer>
 </body>
